--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html, body, main, #root {
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif; /* put your font-family */
 }
 
 input[type=text] {
@@ -20,7 +20,7 @@ input[type=text] {
   background-repeat: no-repeat;
   background-position: 10px 10px;
   padding: 11px 54px 9px 55px;
-  border: 2px solid #ccc;
+  border: 2px solid #D3D3D3;
   border-radius: 4px;
 }
 
@@ -52,11 +52,47 @@ button {
 }
 
 .artwork-description {
+  width: 30%;
   padding: 10px 20px;
-  border: 2px solid #ccc;
+  border: 2px solid #D3D3D3;
   border-radius: 4px;
 }
 
 .option {
-  color: "purple";
+  float: right;
+  height: 60px;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  background-color: #D90368;
+  color: #fff;
+  text-transform: capitalize;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif; /* put your font-family */
+  padding: 20px 0px;
+  width: 120px;
+  border-radius: 6px;
+  overflow: hidden;
+  transition: all 0.2s linear 0s;
+}
+
+.option:before {
+  content: "\f178";
+  font-family: FontAwesome;
+  font-size: 15px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 0;
+  top: 0;
+  opacity: 0;
+  height: 100%;
+  width: 40px;
+  transition: all 0.2s linear 0s;
+}
+
+.option:hover {
+  text-indent: -20px;
 }
