--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,27 @@ button {
   border-radius: 4px;
 }
 
+.art-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.artwork-short-description {
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  width: 40%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.artwork-short-description:hover {
+  border: 2px solid #D90368;
+}
+
 .option {
   float: right;
   height: 60px;
@@ -95,4 +116,9 @@ button {
 
 .option:hover {
   text-indent: -20px;
+}
+
+a {
+  color: black;
+  text-decoration: none; /* no underline */
 }
