--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ button {
   padding: 10px;
   width: 40%;
   text-align: center;
-  margin: 0 auto;
+  margin: 25px auto;
 }
 
 .artwork-short-description:hover {
